[package]
name = "composite_broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt-sn = "0.2.2"
byte = "0.2"
dashmap = "5.4.0"
assert_hex = "0.2.2"
atomic-counter = "1.0.1"
unwinding = "0.1.5"
